# micro-macro

./: .gitignore  .rgignore  Cargo.toml  Justfile  README.md  flake.nix  state.json
.github/workflows/: build-and-test.yml
crates/markov/: Cargo.toml
crates/markov/src/: ix_map.rs  lib.rs  markov.rs  matrix.rs  prob.rs  vector.rs
crates/micro-macro/: Cargo.toml  Trunk.toml  index.html
crates/micro-macro/src/: actions.rs  cache.rs  effects.rs  graph_state.rs  graph_view.rs  heatmap.rs  layout_bipartite.rs  layout_circular.rs  layout_settings.rs  lib.rs  main.rs  native.rs  node_shapes.rs  serialization.rs  state.rs  store.rs  versioned.rs  web.rs
openspec/: project.md
openspec/changes/add-graph-persistence/: tasks.md
openspec/changes/add-observable-definition/: proposal.md  tasks.md
openspec/changes/archive/2025-11-04-add-graph-persistence/: proposal.md
openspec/specs/edge-thickness-visualization/: spec.md
openspec/specs/file-persistence/: spec.md
openspec/specs/graph-editor/: spec.md
openspec/specs/graph-serialization/: spec.md
openspec/specs/graph-state-module/: spec.md
openspec/specs/heatmap-weight-editing/: spec.md
openspec/specs/observable-definition/: spec.md
openspec/specs/observed-dynamics-tab/: spec.md
openspec/specs/observed-graph-computation/: spec.md
openspec/specs/observed-weight-computation/: spec.md
openspec/specs/state-node-weights/: spec.md
openspec/specs/weighted-edge-model/: spec.md
src/: graph.rs  graph_state.rs  graph_view.rs  heatmap.rs  layout_bipartite.rs  layout_circular.rs  main.rs  serialization.rs
(+20 files in other folders)
