[package]
name = "micro-macro"
version = "0.1.0"
edition = "2024"

[dependencies]
colorous = "1.0.16"
eframe = "0.33.0"
egui_graphs = "0.29.0"
egui_plot = "0.34.0"
egui_tabs = "0.2.1"
markov = { version = "0.1.0", path = "../markov" }
ndarray = "0.17.1"
petgraph = "0.8.3"
rand = "0.9.2"
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
