[package]
name = "micro-macro"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "native"
path = "src/bin/native.rs"
required-features = []

[dependencies]
colorous = "1.0.16"
eframe = "0.33.0"
egui_extras = "0.33.0"
egui_graphs = "0.29.0"
egui_plot = "0.34.0"
egui_tabs = "0.2.1"
markov = { version = "0.1.0", path = "../markov" }
ndarray = "0.17.1"
once_cell = "1.19.0"
petgraph = "0.8.3"
rand = "0.9.2"
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Document",
    "HtmlCanvasElement",
    "Window",
] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
